--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a class="link" href="http://www.bbc.co.uk" target="_blank">Download Excursion (Coming soon!)</a>
+    <br />
+    <video src="./resources/videos/excursion.mp4" autoplay loop muted>Video Not Supported</video>
+    <h2>Your personal Travel Guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="./resources/images/camp.jpg" />
+    <br />
+    <img src="./resources/images/phone.png" />
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a class="link" href="http://www.bbc.co.uk" target="_blank">Download Excursion (Coming soon!)</a>
   </body>
 </html>
