Finished except for pesky symbol in footer?

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <img src="./resources/images/phone.png" />
     <h2>Coming Soon for iPhone and Android</h2>
     <a class="link" href="http://www.bbc.co.uk" target="_blank">Download Excursion (Coming soon!)</a>
+    <p id="footer"> © Excursion</p>
   </body>
 </html>
