--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Excursion</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
@@ -16,6 +17,6 @@
     <img src="./resources/images/phone.png" />
     <h2>Coming Soon for iPhone and Android</h2>
     <a class="link" href="http://www.bbc.co.uk" target="_blank">Download Excursion (Coming soon!)</a>
-    <p id="footer"> © Excursion</p>
+    <p id="footer">© Excursion</p>
   </body>
 </html>
